# pastis-benchmark

./: .gitignore  LICENSE  README.md  colormap.txt  create_datasets.ipynb  dataloader.py  demo.ipynb  label_names.json  main.py  mkdocs.yml  panoptic_metrics.py  pyproject.toml
baseline/: dataset.py  main.py  submission_tools.py  unet.py
code/: centerness_ground_truth.py  collate.py  dataloader.py  dataloader_pixelset.py  panoptic_metrics.py  requirements.txt
docs/: index.md
images/: Nomenclature.jp2
src/: baseline_dataset.py  dataloader.py  dataloader_pixelset.py  unet.py
